# workload-identity-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: wip flow.uml
protocolparser/: Cargo.toml
protocolparser/src/: lib.rs  main.rs
protocolparser/tests/: mysql_test.rs
protocolparser/tests/common/: mod.rs
proxy/: Cargo.toml
proxy/src/: main.rs
src/: main.rs
