[package]
name = "azure-wip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
rustls = "0.21.8"
signal-hook = "0.3.17"
structured-logger = "1.0.3"
tokio = { version = "1", features = ["full"] }

