[package]
name = "protocolparser"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocolparser"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.10"
winnow = "0.5.28"

[dev-dependencies]
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.2.0", features = ["mysql"] }

